package dio._1coding_future_POO._0_Pilares_do_POO;

public class Moto extends Veiculo{
    @Override
    public void ligar() {
        System.out.println("Moto ligada");
    }
}
